# robocin-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: 00-feature_request.yml  01-bug_report.yml
cmake/: deps.cmake  rules.cmake
robocin/: CMakeLists.txt
robocin/collection/: CMakeLists.txt  README.md  collection.cpp  collection.h
robocin/collection/internal/: collection_internal.h
robocin/geometry/: CMakeLists.txt  README.md  angle.cpp  angle.h  angle_test.cpp  point2d.cpp  point2d.h  point2d_test.cpp  rect2d.cpp  rect2d.h  rect2d_test.cpp
robocin/geometry/internal/: angle_internal.h  point2d_internal.h  rect2d_internal.h
robocin/utility/: CMakeLists.txt  README.md  angular.cpp  angular.h  angular_test.cpp  collection.cpp  collection.h  concepts.cpp  concepts.h  epsilon.h.in  fuzzy_compare.cpp  fuzzy_compare.h  fuzzy_compare_test.cpp  type_traits.cpp  type_traits.h
robocin/utility/internal/: angular_internal.h
robocin/utility/internal/test/: epsilon_injector.h
